[package]
name = "adafruit-bonnet-playground"
version = "0.1.0"
authors = ["laser <l@s3r.me>"]
edition = "2018"

[dependencies]
linux-embedded-hal = { git = "https://github.com/laser/linux-embedded-hal" }
ssd1306 = "0.2.4"
embedded-hal = "0.2.3"
env_logger = "0.6.1"
log = "0.4.6"
embedded-graphics = "0.4.8"
serde = { version = "1.0.92", features = ["derive"] }
mio_httpc = { version = "0.8.6", features = ["rtls"] }
serde_json = "1.0.39"
